@@ -460,9 +460,10 @@ public:
 
     /// @brief Returns collection of lease for matching DUID
     ///
-    /// @return Lease collection (may be empty if no IPv6 lease found for the DUID).
+    /// @return Lease collection 
+    /// (may be empty if no IPv6 lease found for the DUID).
     virtual Lease6Collection getLeases6(const DUID& duid) const = 0; 
-    
+
     /// @brief Returns range of IPv6 leases using paging.
     ///
     /// This method implements paged browsing of the lease database. The first
